--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <html>
-    <head>
-        <title>Lions Club Fallbrook</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="container">
-            <h1>Lions Club Fallbrook</h1>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lions Club Fallbrook</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+</head>
+
+<body class="min-h-screen flex flex-col md:justify-center md:items-center bg-gray-100 md:flex-row">
+    <div class="text-center md:bg-white p-8 rounded-lg md:shadow-md w-full md:w-auto">
+        <h1 class="text-3xl font-bold mb-4 text-green-600">Lions Club Fallbrook</h1>
+        <p class="text-lg">Fallbrook Ranch Lions Clubs</p>
+        <p class="text-lg">Meetings on the 2nd and 4th Tuesday of the month</p>
+        <p class="text-lg font-medium mt-2">5:30 p.m.</p>
+        <p class="mt-4">Community Health & Wellness Center</p>
+        <p>1636 E. Mission Rd. Fallbrook, CA 92028</p>
+        <div class="border-2 border-gray-300 mt-3 p-1 rounded">
+            <a href="https://maps.app.goo.gl/Akk6pw1LT7Rgi8pY7" class="text-blue-500">Directions</a>
+            <iframe class="hidden md:block"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3150181608535!2d-117.23156488789806!3d33.38894475235047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f760613f4ff%3A0x7d20d9992c2e1137!2sFRHD%20-%20Community%20Health%20%26%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1732656737611!5m2!1sen!2sus"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </body>
+        <p class="mt-4">For more information, contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com"
+                class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
+        <p class="mt-6 text-red-500 font-semibold">No meetings in December 2024.</p>
+    </div>
+</body>
+
 </html>
