--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body class="min-h-screen flex flex-col md:justify-center md:items-center bg-gray-100 md:flex-row">
     <div class="text-center md:bg-white p-8 rounded-lg md:shadow-md w-full md:w-auto">
         <img src="./lionlogo_1500.png" alt="Lions Club Fallbrook Logo" class="w-56 mb-4 m-auto">
-        <h1 class="text-3xl font-bold mb-4 text-green-600">Lions Club Fallbrook</h1>
-        <p class="text-lg">Fallbrook Ranch Lions Clubs</p>
+        <h1 class="text-3xl font-bold mb-4 text-green-600">Fallbrook Ranch Lions Club</h1>
         <p class="text-lg">Meetings on the 2nd and 4th Tuesday of the month</p>
         <p class="text-lg font-medium mt-2">5:30 p.m.</p>
         <p class="mt-4">Community Health & Wellness Center</p>
