--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lions Club Fallbrook</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <style>
+        :root, body {
+            font-family: Inter, sans-serif;
+        }
+        h1 { color:#1c529b;}
+    </style>
 </head>
-
 <body class="min-h-screen flex flex-col md:justify-center md:items-center bg-gray-100 md:flex-row">
     <div class="text-center md:bg-white p-8 rounded-lg md:shadow-md w-full md:w-auto">
         <img src="./lionlogo_1500.png" alt="Lions Club Fallbrook Logo" class="w-56 mb-4 m-auto">
-        <h1 class="text-3xl font-bold mb-4 text-green-600">Fallbrook Ranch Lions Club</h1>
-        <p class="text-lg">Meetings on the 2nd and 4th Tuesday of the month</p>
-        <p class="text-lg font-medium mt-2">5:30 p.m.</p>
+        <h1 class="text-4xl font-bold mb-4">Fallbrook Ranch Lions Club</h1>
+        <p class="text-md">Meetings on the 2nd and 4th Tuesday of the month</p>
+        <p class="text-md font-medium mt-2">5:30 p.m.</p>
+        <p class="mt-2 text-red-500 font-semibold">No meetings in December 2024.</p>
         <p class="mt-4">Community Health & Wellness Center</p>
         <p>1636 E. Mission Rd. Fallbrook, CA 92028</p>
+        <p class="mt-2 text-xs">Room number may change, check posted signs at the building entrance.</p>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
             <a href="https://maps.app.goo.gl/Akk6pw1LT7Rgi8pY7" class="text-blue-500">Directions</a>
             <iframe class="hidden md:block"
@@ -23,10 +29,7 @@
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <p class="mt-4">For more information, contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com"
-                class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
-        <p class="mt-6 text-red-500 font-semibold">No meetings in December 2024.</p>
+        <p class="mt-4">For more information, contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com" class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
     </div>
 </body>
-
 </html>
