--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             font-family: Inter, sans-serif;
         }
         h1 { color:#1c529b;}
+
+        @supports (font-variation-settings: normal) {
+            :root, body {
+                font-family: InterVariable, sans-serif;
+            }
+        }        
     </style>
 </head>
 <body class="min-h-screen flex flex-col md:justify-center md:items-center bg-gray-100 md:flex-row">
@@ -18,8 +24,8 @@
         <h1 class="text-4xl font-bold mb-4">Fallbrook Ranch Lions Club</h1>
         <p class="text-md">Meetings on the 2nd and 4th Tuesday of the month</p>
         <p class="text-md font-medium mt-2">5:30 p.m.</p>
-        <p class="mt-2 text-red-500 font-semibold">No meetings in December 2024.</p>
-        <p class="mt-4">Community Health & Wellness Center</p>
+        <p class="mt-2 font-semibold">Next Meeting : Tuesday, December 10th.</p>
+        <!-- <p class="mt-4">Community Health & Wellness Center</p>
         <p>1636 E. Mission Rd. Fallbrook, CA 92028</p>
         <p class="mt-2 text-xs">Room number may change, check posted signs at the building entrance.</p>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
@@ -28,7 +34,19 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3150181608535!2d-117.23156488789806!3d33.38894475235047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f760613f4ff%3A0x7d20d9992c2e1137!2sFRHD%20-%20Community%20Health%20%26%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1732656737611!5m2!1sen!2sus"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div> -->
+
+        <p class="mt-2 text-red-500 font-semibold">This meeting temporarily relocated:</p>
+        <p class="mt-4 font-semibold">Fallbrook Community Center at the <u>Live Oak Room</u></p>
+        <p>341 Heald Ln, Fallbrook, CA 92028</p>
+        <div class="border-2 border-gray-300 mt-3 p-1 rounded">
+            <a href="https://maps.app.goo.gl/AWCH2Axeeh5ikgJL9" class="text-blue-500">Directions</a>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.7469349788553!2d-117.23850253812432!3d33.377672273307645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7ec4481d7ed1%3A0x619aa4cb3f14fe8a!2sFallbrook%20Community%20Center%20and%20Park!5e0!3m2!1sen!2sus!4v1732831448165!5m2!1sen!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
         <p class="mt-4">For more information, contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com" class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
     </div>
 </body>
