--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="mt-2 text-xs">Room number may change, check posted signs at the building entrance.</p>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
             <a href="https://maps.app.goo.gl/Akk6pw1LT7Rgi8pY7" class="text-blue-500">Directions</a>
-            <iframe class="hidden md:block"
+            <iframe class=""
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3150181608535!2d-117.23156488789806!3d33.38894475235047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f760613f4ff%3A0x7d20d9992c2e1137!2sFRHD%20-%20Community%20Health%20%26%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1732656737611!5m2!1sen!2sus"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -41,9 +41,9 @@
         <p>341 Heald Ln, Fallbrook, CA 92028</p>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
             <a href="https://maps.app.goo.gl/AWCH2Axeeh5ikgJL9" class="text-blue-500">Directions</a>
-            <iframe class="hidden md:block"
+            <iframe style="aspect-ratio:1;"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.7469349788553!2d-117.23850253812432!3d33.377672273307645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7ec4481d7ed1%3A0x619aa4cb3f14fe8a!2sFallbrook%20Community%20Center%20and%20Park!5e0!3m2!1sen!2sus!4v1732831448165!5m2!1sen!2sus"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                width="100%" height="" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
