--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Fallbrook Ranch Lions Club">
+    <meta property="og:description" content="Join the forming Fallbrook Ranch Lions Club to serve the community and volunteer.">
+    <meta property="og:image" content="http://fallbrooklions.com/lionlogo_1500.png">
+    <meta property="og:url" content="http://fallbrooklions.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Fallbrook Ranch Lions Club">
+    <meta name="twitter:description" content="Join the forming Fallbrook Ranch Lions Club to serve the community and volunteer.">
+    <meta name="twitter:image" content="http://fallbrooklions.com/lionlogo_1500.png">
+    <meta name="description" content="The Fallbrook Ranch Lions Club, serve the community and volunteer.">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' http://fallbrooklions.com; script-src 'self';">
+    <meta name="author" content="Fallbrook Ranch Lions Club">
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="robots" content="index, follow">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Fallbrook Ranch Lions Club",
+          "url": "http://fallbrooklions.com",
+          "logo": "http://fallbrooklions.com/lionlogo_1500.png"
+        }
+        </script>
     <title>Lions Club Fallbrook</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://rsms.me/">
@@ -66,7 +89,7 @@
         <p class="mt-4">To learn more about Lions International, visit <a class="text-blue-500 underline" href="https://lionsclubs.org" target="_blank">lionsclubs.org</a>. </p>
 
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">Help your community, join us!</p>
-        <p class="mt-4">For more information, contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com" class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
+        <p class="mt-4">If you are interested in volunteering, please drop by one of our meetings or contact Alfonso at <a href="mailto:ramosalfonsou@gmail.com" class="text-blue-500 underline">ramosalfonsou@gmail.com</a>.</p>
     
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">When</p>
         <p class="text-md">Meetings on the 2nd and 4th Tuesday of the month. <span class="font-medium">5:30 p.m.</span></p>
