--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">When</p>
         <p class="text-md">Meetings on the 2nd and 4th Tuesday of the month. <span class="font-medium">5:30 p.m.</span></p>
-        <p class="mt-2 font-semibold" id="next-meeting">Next Meeting : Tuesday, January 14, 2025</p>
+        <p class="mt-2 font-semibold text-red-700" id="next-meeting">Next Meeting : Tuesday, January 14, 2025</p>
         
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">Where</p>
         <p class="mt-4">Community Health & Wellness Center</p>
@@ -106,7 +106,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <p class="text-xs mt-6 text-center text-gray-500">Website by <a class="text-blue-500 underline" href="http://dellaport.dev" target="_blank">Dellaport.dev</a>, a local member.</p> 
+        <p class="text-xs mt-6 text-center text-gray-500">Website by <a class="text-blue-500 underline" href="https://dellaport.dev" target="_blank">Dellaport.dev</a>, a local member.</p> 
     </div>
 </body>
 </html>
