--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
         <p class="mt-4">Fallbrook Community Center</p>
         <p>341 Heald Ln. Fallbrook, CA 92028</p>
         <p class="mt-2 text-xs">In the Live Oak Room.</p>
+        <a href="https://maps.app.goo.gl/s9tUUqwVQ1XUv2oH7" class="text-blue-500">Directions</a>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
-            <a href="https://maps.app.goo.gl/s9tUUqwVQ1XUv2oH7" class="text-blue-500">Directions</a>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.726309334141!2d-117.23840058789835!3d33.37821065290788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f76f53c1653%3A0xead120de62da34bd!2sCommunity%20Center%2C%20341%20Heald%20Ln%2C%20Fallbrook%2C%20CA%2092028!5e0!3m2!1sen!2sus!4v1735917547829!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.726309334141!2d-117.23840058789835!3d33.37821065290788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f76f53c1653%3A0xead120de62da34bd!2sCommunity%20Center%2C%20341%20Heald%20Ln%2C%20Fallbrook%2C%20CA%2092028!5e0!3m2!1sen!2sus!4v1735917547829!5m2!1sen!2sus" 
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <p class="text-xs mt-6 text-center text-gray-500">Website by <a class="text-blue-500 underline" href="https://dellaport.dev" target="_blank">Dellaport.dev</a>, a local member.</p> 
