Updates for next meeting

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
     
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">When</p>
         <p class="text-md">Meetings on the 2nd and 4th Tuesday of the month. <span class="font-medium">5:30 p.m.</span></p>
-        <p class="mt-2 font-semibold text-red-700" id="next-meeting">Next Meeting : Tuesday, January 14, 2025</p>
+        <p class="mt-2 font-semibold text-red-700" id="next-meeting">Next Meeting : Tuesday, January 28, 2025</p>
         
         <p class="text-xl font-extrabold mt-6 mb-2 text-gray-700">Where</p>
-        <!-- <p class="mt-4">Community Health & Wellness Center</p>
+        <p class="mt-4">Community Health & Wellness Center</p>
         <p>1636 E. Mission Rd. Fallbrook, CA 92028</p>
         <p class="mt-2 text-xs">Room number may change, check posted signs at the building entrance.</p>
         <div class="border-2 border-gray-300 mt-3 p-1 rounded">
@@ -104,9 +104,9 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3150181608535!2d-117.23156488789806!3d33.38894475235047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f760613f4ff%3A0x7d20d9992c2e1137!2sFRHD%20-%20Community%20Health%20%26%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1732656737611!5m2!1sen!2sus"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div> -->
+        </div>
 
-        <p class="mt-4">Fallbrook Community Center</p>
+        <!-- <p class="mt-4">Fallbrook Community Center</p>
         <p>341 Heald Ln. Fallbrook, CA 92028</p>
         <p class="mt-2 text-xs">In the Live Oak Room.</p>
         <a href="https://maps.app.goo.gl/s9tUUqwVQ1XUv2oH7" class="text-blue-500">Directions</a>
@@ -114,7 +114,7 @@
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.726309334141!2d-117.23840058789835!3d33.37821065290788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc7f76f53c1653%3A0xead120de62da34bd!2sCommunity%20Center%2C%20341%20Heald%20Ln%2C%20Fallbrook%2C%20CA%2092028!5e0!3m2!1sen!2sus!4v1735917547829!5m2!1sen!2sus" 
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </div> -->
 
         <p class="text-xs mt-6 text-center text-gray-500">Website by <a class="text-blue-500 underline" href="https://dellaport.dev" target="_blank">Dellaport.dev</a>, a local member.</p> 
     </div>
