--- a/new.html
+++ b/new.html
@@ -29,17 +29,17 @@
 		}
 	</script>
 
-	<link href="http://fallbrooklions.com//favicon.ico" rel="shortcut icon">
+	<link href="http://fallbrooklions.com/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 	<!-- https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/ -->
-	<link rel="preload" href="./src/tailwind.min.css" as="style">
-	<link rel="stylesheet" href="./src/tailwind.min.css" media="all">
+	<link rel="preload" href="./src/tailwind.min.css" as="style" />
+	<link rel="stylesheet" href="./src/tailwind.min.css" media="all" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
 		integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+	<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
 	<!-- https://unpkg.com/swiper/ -->
 	<link rel="stylesheet" href="./src/swiper-bundle.min.css" />
