--- a/new.html
+++ b/new.html
@@ -25,7 +25,7 @@
 			"@type":"Organization",
 			"name":"Fallbrook Ranch Lions Club",
 			"url":"http://fallbrooklions.com",
-			"logo":"http://fallbrooklions.com/lionlogo_1500.png"
+			"logo":"http://fallbrooklions.com/images/logo/lionlogo_1500.png"
 		}
 	</script>
 
