--- a/index.html
+++ b/index.html
@@ -345,6 +345,49 @@
 	</nav>
 
 	<main id="main" class="pt-28 pb-12 text-gray-700" role="main" tabindex="-1">
+		<section id="news" class="max-w-3xl mx-auto bg-white px-8 pt-6 pb-6 md:rounded-lg shadow-md mb-12" aria-label="Fallbrook Ranch Lions Club News"> 
+			<div class="flex items-center mb-4">
+				<hr class="border-gray-300 flex-grow">
+				<span class="mx-4 text-gray-500 uppercase text-sm">Club News</span>
+				<hr class="border-gray-300 flex-grow">
+			</div>
+
+			<h3 class="text-3xl md:text-4xl font-extrabold text-slate-800 mb-6 text-center">
+				Charter Night
+				<span class="block text-lg font-medium text-slate-600 tracking-wide">Fallbrook Ranch Lions Club</span>
+			</h3>
+			
+			<ul class="space-y-4">
+				<li class="flex items-start gap-3">
+					<i class="fa-solid fa-calendar-days text-xl shrink-0"></i>
+					<p><span class="font-semibold">Date:</span> Sunday, August 17th</p>
+				</li>
+				<li class="flex items-start gap-3">
+					<i class="fa-solid fa-clock text-xl shrink-0"></i>
+					<p><span class="font-semibold">Time:</span> 5:00&nbsp;PM – 8:00&nbsp;PM</p>
+				</li>
+				<li class="flex items-start gap-3">
+					<i class="fa-solid fa-location-dot text-xl shrink-0"></i>
+					<p><span class="font-semibold">Location:</span> 127 West Social House, 127 West Elder St, Fallbrook</p>
+				</li>
+			</ul>
+			
+			<div class="mt-8 flex flex-col sm:flex-row sm:flex-wrap gap-2 text-sm">
+				<a href="https://square.link/u/hHGdoNWc" target="_blank" class="inline-flex items-center justify-center gap-2 rounded-xl bg-slate-100 ring-1 ring-slate-300 text-slate-800 font-medium py-2 px-3 transition shadow-sm sm:flex-1">
+					<i class="fa-solid fa-ticket"></i>
+					Purchase Tickets Online
+				</a>
+				<a href="https://maps.app.goo.gl/p4UkAAsDVpZyYFyy5" target="_blank" class="inline-flex items-center justify-center gap-2 rounded-xl bg-slate-100 ring-1 ring-slate-300 text-slate-800 font-medium py-2 px-3 transition shadow-sm sm:flex-1">
+					<i class="fa-solid fa-map-location-dot"></i>
+					Google Maps
+				</a>
+				<a href="./files/Fallbrook Lions Club Charter Night Invite.pdf" target="_blank" class="inline-flex items-center justify-center gap-2 rounded-xl bg-slate-100 ring-1 ring-slate-300 text-slate-800 font-medium py-2 px-3 transition shadow-sm sm:flex-1">
+					<i class="fa-solid fa-file-arrow-down"></i>
+					Download Flyer
+				</a>
+			  </div>
+		</section>
+
 		<section id="about" class="max-w-3xl mx-auto bg-white px-8 pt-6 pb-6 md:rounded-lg shadow-md mb-12" aria-label="About the Fallbrook Ranch Lions Club">
 			<div class="flex items-center mb-4">
 				<hr class="border-gray-300 flex-grow">
@@ -503,7 +546,7 @@
 				find a variety of service projects that benefit their communities and also use the Lions' eight global
 				causes to guide them:</p>
 
-			<ul class="grid grid-cols-1 md:grid-cols-2 list-disc pl-6 mt-4 gap-y-2">
+			<ul class="grid grid-cols-1 md:grid-cols-2 list-disc pl-6 mt-4 mb-4 gap-y-2">
 				<li>Childhood cancer</li>
 				<li>Diabetes</li>
 				<li>Disaster relief</li>
@@ -517,6 +560,23 @@
 			<p class="mt-4">
 				To learn more about Lions International, visit <a href="https://lionsclubs.org" target="_blank" class="text-blue-500 underline">lionsclubs.org</a>.
 			</p>
+
+			<div class="flex items-center mt-4 mb-4">
+				<hr class="border-gray-300 flex-grow">
+				<span class="mx-4 text-gray-500 uppercase text-sm">Lion's International Portal</span>
+				<hr class="border-gray-300 flex-grow">
+			</div>
+			<p class="mt-4">
+				Lion's members, login into your Lion Portal here.
+			</p>
+				
+			<a href="https://lionsinternational.my.site.com/" target="_blank"
+				class="inline-flex items-center px-4 py-2 mt-4 bg-blue-500 hover:bg-blue-600 text-white rounded mx-auto">
+				<i class="fa-solid fa-link mr-2"></i>
+				Access your Lion Portal
+			</a>
+
+
 		</section>
 	</main>
 
