--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
 			<h3 class="text-3xl md:text-4xl font-extrabold text-slate-800 mb-6 text-center">
 				Charter Night
-				<span class="block text-lg font-medium text-slate-600 tracking-wide">Fallbrook Ranch Lions Club</span>
+				<span class="block text-sm font-medium text-slate-600 tracking-wide">Celebrate the official formation of the Fallbrook Ranch Lions Club.<br> Dinner & ceremony to follow.</span>
 			</h3>
 			
 			<ul class="space-y-4">
@@ -536,7 +536,7 @@
 			<h3 class="text-lg font-bold">Meeting Minutes 2025</h3>
 			
 			<div id="minutes-grid" class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-md mt-2"></div>
-			<p class="text-sm mt-4">If the minutes are not online within 48 hours of a meeting's date, contact <a href="mailto:ramosalfonsou@gmail.com" class="text-blue-500 underline">Alfonso</a>.</p>
+			<p class="text-sm mt-4">If the minutes are not online within 48 hours of a meeting's date, contact <a href="mailto:fallbrooklions@gmail.com" class="text-blue-500 underline">Alfonso</a>.</p>
 		</section>
 
 		<section id="lci" class="max-w-3xl mx-auto bg-white px-8 pt-4 pb-6 md:rounded-lg shadow-md" arial-label="More information about Lions International">
@@ -563,11 +563,11 @@
 
 			<div class="flex items-center mt-4 mb-4">
 				<hr class="border-gray-300 flex-grow">
-				<span class="mx-4 text-gray-500 uppercase text-sm">Lion's International Portal</span>
+				<span class="mx-4 text-gray-500 uppercase text-sm">Lions International Portal</span>
 				<hr class="border-gray-300 flex-grow">
 			</div>
 			<p class="mt-4">
-				Lion's members, login into your Lion Portal here.
+				Lions members, login into your Lion Portal here.
 			</p>
 				
 			<a href="https://lionsinternational.my.site.com/" target="_blank"
